# c-sdk

./: .gitignore  CMakeLists.txt  README.md  WALLET_GENERATED_CLIENT_REFACTOR.md  cli.c  demo.c  formula.rb  main.c  run.sh
.github/workflows/: linux-tests.yml
Formula/: wallet.rb
lib/: DOCS.md
lib/chains/: chain_bindings.c  chain_bindings.h
lib/embedded-wallet/: intent_arguments.c  intent_sender.h  sequence_config.c  sequence_config.h  sequence_connector.c  sequence_connector.h  sequence_contract_call.c  sequence_contract_call.h  sequence_login.c  sequence_login.h  sequence_wallet.c  sequence_wallet.h
lib/embedded-wallet/requests/: build_commit_verifier_json.c  build_commit_verifier_json.h  build_complete_auth_json.c  build_complete_auth_json.h  build_contract_call_intent_json.c  build_contract_call_intent_json.h  build_create_wallet_json.c  build_create_wallet_json.h  build_initiate_auth_intent_json.c  build_initiate_auth_intent_json.h  build_intent_json.c  build_intent_json.h  build_open_session_intent_json.c  build_open_session_intent_json.h  build_send_transaction_json.c  build_send_transaction_json.h  build_sign_message_json.h  build_signable_intent_json.c  build_signable_intent_json.h  commit_verifier_return.c  commit_verifier_return.h  complete_auth_return.c  complete_auth_return.h  initiate_auth_intent_return.c  initiate_auth_intent_return.h  intent_arguments.c  intent_arguments.h  open_session_intent_return.c  open_session_intent_return.h  send_transaction_return.c  send_transaction_return.h  sign_message_return.c  sign_message_return.h  transaction_intent_return.c  transaction_intent_return.h  wallet_return.c  wallet_return.h
lib/embedded-wallet/transactions/: contract_call.c  contract_call.h  contract_call_data.h  get_fee_options.c  get_fee_options.h
lib/evm/: eoa_wallet.c  eoa_wallet.cpp  eoa_wallet.h  keccak256.c  keccak256.h  sign_message.c  sign_message.h
lib/indexer/: get_token_balances.c  get_token_balances.h
lib/indexer/models/: balance.h  page.h
lib/indexer/requests/: get_token_balances_args.c  get_token_balances_args.h  get_token_balances_return.c  get_token_balances_return.h
lib/infrastructure/: is_valid_message_signature.c  is_valid_message_signature.h
lib/networking/: http_client.c  http_client.h  http_client_common.c  http_client_common.h  http_client_mbed.c  http_client_mbed.h
lib/runtime/: oms_wallet_runtime.c  oms_wallet_runtime.h  sequence_runtime.c  sequence_runtime.h
lib/storage/: mmi_file_storage.c  secure_storage.c  secure_storage.h  secure_storage_posix.c  storage_handler.c  storage_handler.h
lib/utils/: base64url.c  base64url.h  byte_utils.c  byte_utils.h  globals.c  globals.h  hex_utils.c  hex_utils.h  sha256.c  sha256.h  string_utils.c  string_utils.h  timestamps.c  timestamps.h  uuid.c  uuid.h
lib/wallet/: oms_wallet.h  oms_wallet_auth.c  oms_wallet_auth_signer.c  oms_wallet_auth_signer.h  oms_wallet_config.c  oms_wallet_config.h  oms_wallet_internal.h  oms_wallet_ops.c  oms_wallet_request_signing.c  oms_wallet_request_signing.h  oms_wallet_shared.c  sequence_auth.c  sequence_config.c  sequence_config.h  sequence_connector.c  sequence_connector.h  sequence_request_signing.c  sequence_request_signing.h  sequence_wallet.c  sequence_wallet.h  sequence_wallet_internal.h  sequence_wallet_ops.c  sequence_wallet_shared.c
lib/wallet/requests/: build_commit_verifier_json.h  build_complete_auth_json.c  build_send_transaction_json.c  build_send_transaction_json.h  build_sign_message_json.c  build_sign_message_json.h  build_use_wallet_json.c  build_use_wallet_json.h  commit_verifier_return.c  commit_verifier_return.h  complete_auth_return.c  complete_auth_return.h  send_transaction_return.c  send_transaction_return.h  sign_message_return.c  sign_message_return.h  wallet_return.c  wallet_return.h
tests/: auth_signer_provider_test.c  embedded_secure_auth_provider_test.c  oms_wallet_request_signing_test.c  request_signing_vectors.md  secure_storage_test.c  sequence_request_signing_test.c  timestamps_test.c
